# KC_PV_DG

./: .env.example  .gitignore  CREDENTIALS.local.example  Plan.md  ReadMe.md  docker-compose.yml  huawei-rozwell.yml  package.json
Export/: base_board.yaml  control_core.yaml  display_oled.yaml  inverter_huawei.yaml  pv-dg-controller.generated.yaml  secrets.yaml  site.config.yaml  site.contract.yaml
Modular_Yaml/: base_board.yaml  display_oled.yaml  inverter_huawei_10.yaml  (+15 more)
dynamic_zero_export/firmware_core/: CMakeLists.txt  README.md
dynamic_zero_export/firmware_core/docs/: firmware_core_architecture.md  firmware_core_status.md  onboarding_and_modes.md
dynamic_zero_export/firmware_core/examples/: site-config.keyvals
dynamic_zero_export/firmware_core/include/dzx/: alarm.hpp  api_contract.hpp  config.hpp  controller.hpp  interfaces.hpp  monitoring.hpp  policy_engine.hpp  policy_types.hpp  serialization.hpp  simulator.hpp  source_detection.hpp  topology.hpp  virtual_meter.hpp
dynamic_zero_export/firmware_core/src/: alarm.cpp  api_contract.cpp  config.cpp  controller.cpp  monitoring.cpp  policy_engine.cpp  serialization.cpp  simulator.cpp  source_detection.cpp  topology.cpp  virtual_meter.cpp
dynamic_zero_export/firmware_core/tests/: test_api_contract.cpp  test_config.cpp  test_controller.cpp  test_main.cpp  test_policy_engine.cpp
firmware/esp32-s3/main/: CMakeLists.txt  app_config.h  device_id.c  device_id.h  device_registry.c  device_registry.h  em500.c  em500.h  energy_history.c  energy_history.h  http_server.c  http_server.h  main.c  modbus_poll.c  modbus_poll.h  modbus_rtu.c  modbus_rtu.h  nvs_store.c  nvs_store.h  ota.c  ota.h  wifi.c  wifi.h
firmware/esp32-s3/main/inverters/: huawei_sun2000.c  huawei_sun2000.h  inverter_iface.h  inverter_registry.c  inverter_registry.h
(+428 files in other folders)
