idf_component_register(
  SRCS
    "main.c"
    "wifi.c"
    "http_server.c"
    "nvs_store.c"
    "device_id.c"
    "device_registry.c"
    "ota.c"
    "modbus_rtu.c"
    "modbus_poll.c"
    "em500.c"
    "inverters/huawei_sun2000.c"
    "inverters/inverter_registry.c"
  INCLUDE_DIRS "." "inverters"
  REQUIRES
    esp_http_server
    esp_wifi
    nvs_flash
    app_update
    esp_https_ota
    esp_timer
    driver
    json
    spiffs
)
